[gd_scene load_steps=4 format=3 uid="uid://df8dfipyubll"]

[ext_resource type="Script" uid="uid://j1g5xt5kvcv5" path="res://src/World/selection.gd" id="1_5tkve"]
[ext_resource type="Theme" uid="uid://crtg3dknqulx2" path="res://assets/UI/Theme.tres" id="1_a4npe"]
[ext_resource type="Texture2D" uid="uid://bjl756osejanv" path="res://assets/UI/RogueRacingTitle.png" id="2_a4npe"]

[node name="Selection" type="CanvasLayer"]
script = ExtResource("1_5tkve")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_a4npe")
expand_mode = 1

[node name="KartSelection" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_a4npe")

[node name="VBoxContainer" type="VBoxContainer" parent="KartSelection"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -214.0
offset_top = -256.0
offset_right = 214.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Karts" type="HBoxContainer" parent="KartSelection/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 100

[node name="ConfirmKart" type="Button" parent="KartSelection"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -144.0
offset_top = -191.0
offset_right = 144.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Confirm"

[node name="Label" type="Label" parent="KartSelection"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -261.5
offset_top = 88.0
offset_right = 261.5
offset_bottom = 124.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "Choose a Kart"

[node name="PowerSelection" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_a4npe")

[node name="VBoxContainer" type="VBoxContainer" parent="PowerSelection"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -451.0
offset_top = -241.0
offset_right = 448.0
offset_bottom = 193.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Powers" type="GridContainer" parent="PowerSelection/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 100
theme_override_constants/v_separation = 50
columns = 3

[node name="Label" type="Label" parent="PowerSelection"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -429.0
offset_top = 88.0
offset_right = 429.0
offset_bottom = 137.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "Choose 2 Powers"

[node name="ConfirmPower" type="Button" parent="PowerSelection"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -144.0
offset_top = -191.0
offset_right = 144.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Confirm"
